--- a/Montadora.Veiculos.Web/Web.config
+++ b/Montadora.Veiculos.Web/Web.config
@@ -4,6 +4,11 @@
    https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+
+  <connectionStrings>
+    <add  name="MontadoraDbContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=Montadoras;User Id=sa;Password=a; "/>
+  </connectionStrings>
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
