--- a/Montadora.Veiculos.Dados.Entity/Montadoras.Veiculos.Dados.Entity.csproj
+++ b/Montadora.Veiculos.Dados.Entity/Montadoras.Veiculos.Dados.Entity.csproj
@@ -56,6 +56,10 @@
     <Compile Include="Migrations\202011081330588_Migracao-Inicial.designer.cs">
       <DependentUpon>202011081330588_Migracao-Inicial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202011091148277_MigracaoAltTabVeiculo.cs" />
+    <Compile Include="Migrations\202011091148277_MigracaoAltTabVeiculo.designer.cs">
+      <DependentUpon>202011091148277_MigracaoAltTabVeiculo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeConfiguration\MontadoraTypeConfiguration.cs" />
@@ -78,6 +82,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202011081330588_Migracao-Inicial.resx">
       <DependentUpon>202011081330588_Migracao-Inicial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202011091148277_MigracaoAltTabVeiculo.resx">
+      <DependentUpon>202011091148277_MigracaoAltTabVeiculo.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
