--- a/Montadora.Veiculos.Web/Montadoras.Veiculos.Web.csproj
+++ b/Montadora.Veiculos.Web/Montadoras.Veiculos.Web.csproj
@@ -141,7 +141,9 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Montadora\MontadoraIndexViewModel.cs" />
+    <Compile Include="ViewModels\Montadora\MontadoraViewModel.cs" />
     <Compile Include="ViewModels\Veiculo\VeiculoIndexViewModel.cs" />
+    <Compile Include="ViewModels\Veiculo\VeiculoViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
