Annnotations criada; adição do atributo CNPJMontadora; Alt TypeConfiguration; DB alterado - acrescentado o cnpj; Acrescentada prop nas views;

--- a/Montadora.Veiculos.Web/Montadoras.Veiculos.Web.csproj
+++ b/Montadora.Veiculos.Web/Montadoras.Veiculos.Web.csproj
@@ -127,6 +127,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Annotations\CNPJMontadoraAttribute.cs" />
     <Compile Include="App_Start\AutoMapperConfig.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
