--- a/Montadora.Veiculos.Dados.Entity/Montadoras.Veiculos.Dados.Entity.csproj
+++ b/Montadora.Veiculos.Dados.Entity/Montadoras.Veiculos.Dados.Entity.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Migrations\202011091148277_MigracaoAltTabVeiculo.designer.cs">
       <DependentUpon>202011091148277_MigracaoAltTabVeiculo.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202011130147075_MigracaoCNPJ.cs" />
+    <Compile Include="Migrations\202011130147075_MigracaoCNPJ.designer.cs">
+      <DependentUpon>202011130147075_MigracaoCNPJ.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeConfiguration\MontadoraTypeConfiguration.cs" />
@@ -85,6 +89,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202011091148277_MigracaoAltTabVeiculo.resx">
       <DependentUpon>202011091148277_MigracaoAltTabVeiculo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202011130147075_MigracaoCNPJ.resx">
+      <DependentUpon>202011130147075_MigracaoCNPJ.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
