Criada classe VeiculosRepositorio; Alterada classe RepositorioGenericEntity; Alterada classe MontadorasRepositorio; Atlerada classe DominioParaViewModelProfile; Alterada classe VeiculosConroller;

--- a/Montadoras.Veiculos.Repositorios.Entity/Montadoras.Veiculos.Repositorios.Entity.csproj
+++ b/Montadoras.Veiculos.Repositorios.Entity/Montadoras.Veiculos.Repositorios.Entity.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="MontadorasRepositorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VeiculosRepositorio.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Montadora.Veiculos.Dados.Entity\Montadoras.Veiculos.Dados.Entity.csproj">
