--- a/Montadora.Veiculos.Web/Montadoras.Veiculos.Web.csproj
+++ b/Montadora.Veiculos.Web/Montadoras.Veiculos.Web.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MontadorasController.cs" />
     <Compile Include="Controllers\VeiculosController.cs" />
+    <Compile Include="Filtros\LogActionFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
